# cnb-def-pair-classifier

./: README.md  config.py  pyproject.toml
cnb_def_pair_classifier/dataset/: dataset.py
cnb_def_pair_classifier/models/: sense_pair_classifier.py
cnb_def_pair_classifier/tasks/: train.py
